# spmc-waker

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  check_ordering.py  prek.toml
.github/workflows/: ci.yml
asm/: Cargo.toml  check-asm.sh
asm/aarch64/S=Sequential,CACHED=false,R=Strict/: poll_wait_until.s  register.s  register_impl_cold.s  take.s  wake.s  wake_cold.s
asm/aarch64/S=Sequential,CACHED=false,R=Unchecked/: poll_wait_until.s  register.s  register_impl_cold.s  wake.s  wake_cold.s
asm/aarch64/S=Sequential,CACHED=true,R=Strict/: poll_wait_until.s  register.s  register_impl_cold.s  wake.s  wake_cold.s  wake_impl_cold.s
asm/aarch64/S=Sequential,CACHED=true,R=Unchecked/: poll_wait_until.s  register.s  register_impl_cold.s  registered.s  take.s  wake.s  wake_cold.s  wake_impl_cold.s
asm/aarch64/S=Synchronized,CACHED=false,R=Strict/: poll_wait_until.s  register.s  register_impl_cold.s  take.s  wake.s  wake_cold.s  wake_impl_cold.s
asm/aarch64/S=Synchronized,CACHED=false,R=Unchecked/: poll_wait_until.s  register.s  register_impl_cold.s  registered.s  take.s  unregister.s  wake.s  wake_cold.s  wake_impl_cold.s
asm/aarch64/S=Synchronized,CACHED=true,R=Strict/: poll_wait_until.s  register.s  register_impl_cold.s  unregister.s  wake.s  wake_cold.s  wake_impl_cold.s
asm/aarch64/S=Synchronized,CACHED=true,R=Unchecked/: poll_wait_until.s  register.s  register_impl_cold.s  unregister.s  wake.s  wake_cold.s  wake_impl_cold.s
asm/aarch64/S=Unsynchronized,CACHED=false,R=Strict/: poll_wait_until.s  register.s  register_impl_cold.s  take.s  unregister.s  wake.s  wake_cold.s
asm/aarch64/S=Unsynchronized,CACHED=false,R=Unchecked/: poll_wait_until.s  register.s  register_impl_cold.s  registered.s  take.s  wake.s  wake_cold.s
asm/aarch64/S=Unsynchronized,CACHED=true,R=Strict/: poll_wait_until.s  register.s  register_impl_cold.s  wake_cold.s  wake_impl_cold.s
asm/aarch64/S=Unsynchronized,CACHED=true,R=Unchecked/: poll_wait_until.s  register.s  register_impl_cold.s  registered.s  take.s  wake.s  wake_cold.s  wake_impl_cold.s
asm/aarch64/SYNC=Sequential,CACHED=false/: poll_wait_until.s  register.s  register_cold.s  register_fallback.s  take.s  take_cold.s  try_register.s  wake.s  wake_cold.s  wake_fallback.s  wake_registered_cold.s
asm/src/: lib.rs
benches/: README.md  comparison.rs
examples/: event.rs
src/: exclusive.rs  lib.rs  loom.rs  registration.rs  small.rs  state_machine.rs  sync.rs  synchronization.rs  utils.rs  wait_until.rs  waker_cell.rs
tests/: small.rs  spmc.rs  spmc_safe.rs  spmc_waker.rs  sync.rs  sync_cached.rs  sync_uncached.rs  tests.rs  unsync.rs  unsync_cached.rs  unsync_uncached.rs
tests/common/: mod.rs
(+261 files in other folders)
