[package]
name = "spmc_waker"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/wyfo/spmc-waker"
keywords = [
  "atomic",
  "lock-free",
  "no-std",
  "mpsc",
  "async",
]
categories = [
  "concurrency",
  "data-structures",
  "no-std",
]
license = "MIT"
repository = "https://github.com/wyfo/spmc-waker"

[features]
portable-atomic = ["dep:portable-atomic"]

[dependencies]
portable-atomic = { version = "1", optional = true, default-features = false }
diatomic-waker = "0.2.3"

[dev-dependencies]
futures = "0.3.32"
divan = "0.1"

[lib]
test = false

[[bench]]
name = "ping_pong"
harness = false

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7.2", features = ["futures"] }
const_fn = "0.4.12"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
dbg_macro = "warn"
semicolon_if_nothing_returned = "warn"
