[package]
name = "spmc-waker"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/wyfo/spmc-waker"
keywords = [
    "atomic",
    "lock-free",
    "no-std",
    "mpsc",
    "async",
]
categories = [
    "concurrency",
    "data-structures",
    "no-std",
]
repository = "https://github.com/wyfo/spmc-waker"
description = "A wait-free synchronization primitive for task wakeup."
rust-version = "1.83.0"

[features]
portable-atomic = ["dep:portable-atomic"]

[dependencies]
portable-atomic = { version = "1", optional = true, default-features = false }

[dev-dependencies]
diatomic-waker = "0.2.3"
futures = "0.3.32"
divan = "0.1"
rstest = "0.26.1"

[lib]
test = false
bench = false

[[bench]]
name = "comparison"
harness = false

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7.2", features = ["futures"] }
const_fn = "0.4.12"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(coverage_nightly)'] }
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
dbg_macro = "warn"
semicolon_if_nothing_returned = "warn"
